--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
+          <div class="mb-2">
+                <a href="about.html" class="btn btn-custom btn-lg">About</a>
+          </div>
           <div class="text-center small text-navy-light mt-2">
             © 2025 Ricardo Melo. All rights reserved.
           </div>
