--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
+          <a href="index.html#profile" class="btn btn-custom me-3"
+              >View Profile</a
+            >
           <div class="mb-2">
                 <a href="about.html" class="btn btn-custom btn-lg">About</a>
           </div>
