--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
-          <a href="index.html#profile" class="btn btn-custom me-3"
-              >View Profile</a
+          <a href="index.html#profile" class="btn btn-custom btn-lg"
+              >Profile</a
             >
           <div class="mb-2">
                 <a href="about.html" class="btn btn-custom btn-lg">About</a>
