--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
               professional challenges or exploring the world around me, I'm
               always moving forward, learning, and evolving.
             </p>
-            <a href="index.html#profile" class="btn btn-custom me-3"
-              >View Profile</a
-            >
+             <a href="index.html#profile" class="btn btn-custom btn-lg"
+              >Profile</a
+              >
           </div>
         </div>
       </div>
