--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 every detail."
               </p>
               <div class="mb-2">
-                <a href="about.html" class="btn btn-custom btn-lg">About</a>
+                <a href="about.html" class="btn-custom btn-lg">About</a>
               </div>
             </div>
           </div>
@@ -253,11 +253,9 @@
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
-          <a href="index.html#profile" class="btn btn-custom btn-lg"
-              >Profile</a
-            >
-          <div class="mb-2">
-                <a href="about.html" class="btn btn-custom btn-lg">About</a>
+          <div class="btn-group">
+            <a href="index.html#profile" class="btn-custom">Profile</a>
+            <a href="about.html" class="btn-custom">About</a>
           </div>
           <div class="text-center small text-navy-light mt-2">
             © 2025 Ricardo Melo. All rights reserved.
