--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               </p>
               <div class="mb-2">
                 <a href="about.html" class="btn-custom btn-lg">About</a>
+                <a href="livro.html" class="btn-custom">My Book</a>
               </div>
             </div>
           </div>
@@ -95,7 +96,11 @@
           <div class="col-md-4">
             <div class="card card-custom h-100 shadow-sm">
               <div class="card-img-card text-center pt-4">
-                <img src="img/janela2cinza.png" alt="Skills" class="card-photo mb-3" />
+                <img
+                  src="img/janela2cinza.png"
+                  alt="Skills"
+                  class="card-photo mb-3"
+                />
               </div>
               <div class="card-body">
                 <h5 class="card-title">
@@ -182,22 +187,26 @@
                     <br />Caixa Econômica Federal Bank (2007-2008)
                   </li>
                   <li>
-                    <strong>Salesman and representative of computer products</strong>
+                    <strong
+                      >Salesman and representative of computer products</strong
+                    >
                     <br />(2004-2006)
                   </li>
-                   <li>
+                  <li>
                     <strong>Agricultural company manager</strong>
                     <br />(2002-2004)
                   </li>
-                   <li>
+                  <li>
                     <strong>Quality advisor - ISO 9001/2000</strong>
                     <br />(1999-2001)
                   </li>
-                   <li>
-                    <strong>Sales and financial manager of automotive parts</strong>
+                  <li>
+                    <strong
+                      >Sales and financial manager of automotive parts</strong
+                    >
                     <br />(1998-1999)
                   </li>
-                   <li>
+                  <li>
                     <strong>Building materials store manager</strong>
                     <br />(1990-1996)
                   </li>
@@ -253,9 +262,10 @@
               ><i class="fas fa-envelope"></i
             ></a>
           </div>
-          <div class="btn-group">
+          <div class="btn-group mb-3">
             <a href="index.html#profile" class="btn-custom">Profile</a>
             <a href="about.html" class="btn-custom">About</a>
+            <a href="livro.html" class="btn-custom">My Book</a>
           </div>
           <div class="text-center small text-navy-light mt-2">
             © 2025 Ricardo Melo. All rights reserved.
