--- a/about.html
+++ b/about.html
@@ -55,18 +55,63 @@
               professional challenges or exploring the world around me, I'm
               always moving forward, learning, and evolving.
             </p>
-             <a href="index.html#profile" class="btn btn-custom btn-lg"
-              >Profile</a
-              >
           </div>
         </div>
       </div>
     </section>
-
-    <div class="text-center mt-5 mb-3 small text-gray">
-      © 2025 Ricardo Melo. All rights reserved.
-    </div>
-
+ <footer
+      class="footer-section pt-4 pb-3"
+      style="background: none; border-top: 1px solid #e5e7eb"
+    >
+      <div class="container">
+        <div class="d-flex flex-column align-items-center">
+          <div class="mb-3 d-flex justify-content-center main-social">
+            <a
+              href="https://github.com/ricardoadevmelo"
+              target="_blank"
+              class="me-3 fs-3"
+              aria-label="GitHub"
+              ><i class="fab fa-github"></i
+            ></a>
+            <a
+              href="https://linkedin.com/in/ricardoadevmelo"
+              target="_blank"
+              class="me-3 fs-3"
+              aria-label="LinkedIn"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a
+              href="https://wa.me/55000000000"
+              target="_blank"
+              class="me-3 fs-3"
+              aria-label="WhatsApp"
+              ><i class="fab fa-whatsapp"></i
+            ></a>
+            <a
+              href="https://instagram.com/ricardoadevmelo"
+              target="_blank"
+              class="me-3 fs-3"
+              aria-label="Instagram"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a
+              href="mailto:ricardo@exemplo.com"
+              target="_blank"
+              class="fs-3"
+              aria-label="Email"
+              ><i class="fas fa-envelope"></i
+            ></a>
+          </div>
+          <div class="btn-group mb-3">
+            <a href="index.html#profile" class="btn-custom">Profile</a>
+            <a href="livro.html" class="btn-custom">My Book</a>
+          </div>
+          <div class="text-center small text-navy-light mt-2">
+            © 2025 Ricardo Melo. All rights reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
