--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -61,11 +61,10 @@
     </section>
  <footer
       class="footer-section pt-4 pb-3"
-      style="background: none; border-top: 1px solid #e5e7eb"
     >
       <div class="container">
         <div class="d-flex flex-column align-items-center">
-          <div class="mb-3 d-flex justify-content-center main-social">
+          <div class="mb-3 d-flex justify-content-center social-icons">
             <a
               href="https://github.com/ricardoadevmelo"
               target="_blank"
@@ -104,6 +103,7 @@
           </div>
           <div class="btn-group mb-3">
             <a href="index.html#profile" class="btn-custom">Profile</a>
+            <a href="about.html" class="btn-custom">About</a>
             <a href="livro.html" class="btn-custom">My Book</a>
           </div>
           <div class="text-center small text-navy-light mt-2">
