--- a/livro.html
+++ b/livro.html
@@ -135,13 +135,12 @@
         </div>
       </div>
     </section>
-    <footer
+ <footer
       class="footer-section pt-4 pb-3"
-      style="background: none; border-top: 1px solid #e5e7eb"
     >
       <div class="container">
         <div class="d-flex flex-column align-items-center">
-          <div class="mb-3 d-flex justify-content-center main-social">
+          <div class="mb-3 d-flex justify-content-center social-icons">
             <a
               href="https://github.com/ricardoadevmelo"
               target="_blank"
@@ -181,6 +180,7 @@
           <div class="btn-group mb-3">
             <a href="index.html#profile" class="btn-custom">Profile</a>
             <a href="about.html" class="btn-custom">About</a>
+            <a href="livro.html" class="btn-custom">My Book</a>
           </div>
           <div class="text-center small text-navy-light mt-2">
             © 2025 Ricardo Melo. All rights reserved.
