--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricardo Melo | Profile & Resume</title>
+    <title>Ricardo Melo | Guia Prático da Assessoria Jurídica e Tecnologia</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <meta name="description" content="Guia prático da assessoria jurídica, tecnologia, perfil profissional e livro de Ricardo Melo.">
+    <meta name="keywords" content="Ricardo Melo, livro jurídico, assessoria jurídica, tecnologia, perfil, Cork, Brasil, Tribunal de Justiça">
+    <meta name="author" content="Ricardo Melo">
+    <meta name="google-site-verification" content="NqIpixyfIHcDNsXfTUQedMioxHzW6Zbt701VYuXWwWg" />
   </head>
   <body>
     <!-- Hero -->
