--- a/livro.html
+++ b/livro.html
@@ -24,9 +24,9 @@
           <div class="col-lg-5 mb-4 mb-lg-0 text-center">
             <img
               src="img/capa.2jpg.jpg"
-              alt="Capa do Livro"
+              alt="Capa do livro Guia Prático da Assessoria Jurídica"
               class="img-fluid rounded shadow-lg"
-              style="max-width: 360px"
+              style="max-width: 380px"
             />
           </div>
           <div class="col-lg-7">
@@ -61,84 +61,47 @@
             <h5 class="mb-3 mt-4">Onde comprar:</h5>
             <div class="d-flex flex-wrap gap-2 mb-4">
               <a
-                href="https://www.amazon.com.br/"
+                href="https://www.amazon.com.br/dp/B0FGSX5XJK"
                 class="btn btn-outline-dark btn-platform"
                 target="_blank"
               >
                 <i class="fab fa-amazon"></i> Amazon
               </a>
               <a
-                href="https://www.hotmart.com/"
+                href="https://go.hotmart.com/G100739217Q"
                 class="btn btn-outline-danger btn-platform"
                 target="_blank"
               >
                 <i class="fa-solid fa-fire"></i> Hotmart
               </a>
               <a
-                href="https://fliphtml5.com/"
+                href="https://online.fliphtml5.com/gfxmm/zpyd/"
                 class="btn btn-outline-primary btn-platform"
                 target="_blank"
               >
                 <i class="fa-solid fa-book-open"></i> FlipHTML5
               </a>
               <a
-                href="https://www.uiclap.com.br/"
+                href="https://loja.uiclap.com/titulo/ua105576/"
                 class="btn btn-outline-success btn-platform"
                 target="_blank"
               >
                 <i class="fa-solid fa-book"></i> Uiclap
               </a>
               <a
-                href="https://clubedeautores.com.br/"
+                href="https://clubedeautores.com.br/livro/guia-pratico-da-assessoria-juridica-no-tribunal-de-justica-brasileiro"
                 class="btn btn-outline-secondary btn-platform"
                 target="_blank"
               >
                 <i class="fa-solid fa-users"></i> Clube dos Autores
               </a>
-            </div>
-            <h4 class="mb-3 mt-4">Contato para compra direta ou dúvidas:</h4>
-            <form
-              action="mailto:ricardo@exemplo.com"
-              method="POST"
-              enctype="text/plain"
-            >
-              <div class="mb-3">
-                <label for="nome" class="form-label">Nome</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="nome"
-                  name="Nome"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">E-mail</label>
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  name="Email"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="mensagem" class="form-label">Mensagem</label>
-                <textarea
-                  class="form-control"
-                  id="mensagem"
-                  name="Mensagem"
-                  rows="4"
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn btn-outline-navy">Enviar</button>
-            </form>
-          </div>
         </div>
+            <div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/gfxmm/zpyd/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
       </div>
     </section>
- <footer
+    <div>
+    </div>
+    <footer
       class="footer-section pt-4 pb-3"
     >
       <div class="container">
