Revise index.html for new professional profile
Updated the content and structure of the index.html file to reflect a new professional profile for Ricardo Melo as a Legal Assistant and Legal Secretary in Cork, including changes to the title, meta descriptions, and various sections.

--- a/index.html
+++ b/index.html
@@ -1,283 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricardo Melo | Guia Prático da Assessoria Jurídica e Tecnologia</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <meta name="description" content="Guia prático da assessoria jurídica, tecnologia, perfil profissional e livro de Ricardo Melo.">
-    <meta name="keywords" content="Ricardo Melo, livro jurídico, assessoria jurídica, tecnologia, perfil, Cork, Brasil, Tribunal de Justiça">
-    <meta name="author" content="Ricardo Melo">
-    <meta name="google-site-verification" content="NqIpixyfIHcDNsXfTUQedMioxHzW6Zbt701VYuXWwWg" />
-  </head>
-  <body>
-    <!-- Hero -->
-    <section class="hero-section d-flex align-items-center" id="about">
-      <div class="container">
-        <div class="row align-items-center flex-md-row flex-column">
-          <div class="col-md-5 mb-4 mb-md-0 text-center">
-            <div class="profile-pic mx-auto shadow-lg">
-              <img
-                src="img/fotoperfil.png"
-                alt="Ricardo Melo"
-                class="img-fluid rounded-circle border border-4 border-navy-light"
-              />
-            </div>
-          </div>
-          <div
-            class="col-md-7 d-flex align-items-center"
-            style="min-height: 220px"
-          >
-            <div class="w-100 text-end header-text-justify">
-              <h1 class="display-4 fw-bold text-navy mb-3">
-                Hi, I'm Ricardo Melo
-              </h1>
-              <p class="lead text-navy-light mb-4">
-                "Passionate about innovation and continuous learning, <br />
-                I bring creativity, independence, and strong communication
-                skills to my work. <br />
-                Focus and dedication, I strive for quality and excellence in
-                every detail."
-              </p>
-              <div class="mb-2">
-                <a href="about.html" class="btn-custom btn-lg">About</a>
-                <a href="livro.html" class="btn-custom">My Book</a>
-              </div>
-            </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Ricardo Melo | Legal Assistant & Legal Secretary | Cork</title>
+
+  <meta name="description" content="Ricardo Melo – Legal Assistant and Legal Secretary based in Cork. 11+ years of judicial experience supporting judges, case management, legal documentation, and court procedures." />
+  <meta name="keywords" content="Legal Assistant Cork, Legal Secretary Cork, Law Firm Assistant Ireland, Judicial Experience, Case Management, Legal Support" />
+  <meta name="author" content="Ricardo Melo" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
+
+<body>
+
+<!-- HERO -->
+<section class="hero-section py-5 d-flex align-items-center">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-md-4 text-center mb-4 mb-md-0">
+        <img src="img/fotoperfil.png"
+             alt="Ricardo Melo – Legal Assistant Cork"
+             class="img-fluid rounded-circle shadow"
+             style="max-width: 220px;">
+      </div>
+
+      <div class="col-md-8">
+        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+        <h2 class="h5 text-muted mb-3">
+          Legal Assistant & Legal Secretary | Cork, Ireland
+        </h2>
+
+        <p class="lead">
+          Legal professional with over <strong>11 years of judicial experience</strong>,
+          providing direct support to judges and legal teams.
+          Strong background in <strong>case management, legal documentation,
+          procedural compliance</strong> and administrative legal support.
+        </p>
+
+        <div class="mt-4">
+          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
+          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CORE COMPETENCIES -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Core Legal Competencies</h3>
+
+    <div class="row g-4">
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-scale-balanced me-2"></i>
+              Judicial Experience
+            </h5>
+            <p class="mb-0">
+              11+ years working within the Brazilian Court of Justice,
+              supporting judges with legal analysis, drafting decisions,
+              procedural control and case preparation.
+            </p>
           </div>
         </div>
       </div>
-    </section>
 
-    <!-- Cards Section -->
-    <section class="py-5" id="profile">
-      <div class="container">
-        <div class="row g-4">
-          <!-- Education -->
-          <div class="col-md-4">
-            <div class="card card-custom h-100 shadow-sm">
-              <div class="card-img-card text-center pt-4">
-                <img
-                  src="img/formatura2.png"
-                  alt="Education"
-                  class="card-photo mb-3"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">
-                  <i class="fa-solid fa-graduation-cap me-2"></i>Education
-                </h5>
-                <ul class="list-unstyled">
-                  <li class="mt-2">
-                    <strong>Systems Analysis and Development</strong><br />
-                    UNIBF - University Center
-                  </li>
-                  <li class="mt-2">
-                    <strong>General English course</strong><br />
-                    ICOT - International College of Technology
-                  </li>
-                  <li class="mt-2">
-                    <strong>Bachelor's degree in law</strong><br />
-                    University of Maurício of Nassau
-                  </li>
-                  <li class="mt-2">
-                    <strong>Bachelor's Degree in Biology</strong><br />
-                    UESPI - State University of Piauí
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Skills -->
-          <div class="col-md-4">
-            <div class="card card-custom h-100 shadow-sm">
-              <div class="card-img-card text-center pt-4">
-                <img
-                  src="img/janela2cinza.png"
-                  alt="Skills"
-                  class="card-photo mb-3"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">
-                  <i class="fa-solid fa-code me-2"></i>Skills
-                </h5>
-                <ul class="list-unstyled">
-                  <li class="mt-2">
-                    Key Traits at Work: Creative and innovative - Enjoys
-                    exploring new ideas and solutions. Motivational – Inspires
-                    colleagues with his enthusiasm and positive outlook.
-                    Independent – Prefers autonomy and avoids overly rigid
-                    environments. Communicative – Excels in roles requiring
-                    interaction and teamwork. Competitive – Sees challenges as
-                    opportunities for self-improvement.
-                  </li>
-                  <li class="mt-2">
-                    I'm studying website development and management using HTML
-                    5, CSS 3, Flexbox, Grid, Bootstrap 5, JavaScript, jQuery,
-                    Node.js, Express.js, APIs, Databases, SQL, MongoDB,
-                    Mongoose, Authentication, Firebase, React.js, Web Design,
-                    Deployment with GitHub Pages, Heroku and MongoDB Atlas, Web3
-                    Development on the Internet Computer, Blockchain technology,
-                    Token contract development, NFT minting.
-                  </li>
-                  <li class="mt-2">
-                    I studied Java program language and your technologies as
-                    tools and frameworks such as JDBC for SQL-based data access,
-                    Spring Boot, JPA/Hibernate, Maven, Spring Data JPA, and
-                    Spring Data MongoDB, Git and Github. I can perform computer
-                    maintenance and assembly, hardware and software skills, and
-                    edit images, audio and videos.
-                  </li>
-                  <li class="mt-2">
-                    Great experience in operational, functional, and people
-                    management.
-                  </li>
-                  <li class="mt-2">
-                    Sales and customer service, supervision, team leader,
-                    teamwork.
-                  </li>
-                  <li class="mt-2">Advanced English</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Experience -->
-          <div class="col-md-4">
-            <div class="card card-custom h-100 shadow-sm">
-              <div class="card-img-card text-center pt-4">
-                <img
-                  src="img/experiencia2.png"
-                  alt="Experience"
-                  class="card-photo mb-3"
-                />
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">
-                  <i class="fa-solid fa-briefcase me-2"></i>Experience
-                </h5>
-                <ul class="list-unstyled">
-                  <li>
-                    <strong>Customer Service</strong>
-                    <br />SuperValu, is part of the Musgrave Group, Ireland's
-                    largest grocery and food distributor (2024-present).
-                  </li>
-                  <li>
-                    <strong>Deputy Adviser and Assistant Judge</strong>
-                    <br />Brazilian Court of Justice (2017-2024).
-                  </li>
-                  <li>
-                    <strong>Lawyer</strong>
-                    <br />(2013-2017)
-                  </li>
-                  <li>
-                    <strong>Trade Representative</strong>
-                    <br />(2013-2015)
-                  </li>
-                  <li>
-                    <strong>Law office and legal advice as an intern </strong>
-                    <br />(2008-2013)
-                  </li>
-                  <li>
-                    <strong>Clerk, Express Service and Team Leader</strong>
-                    <br />Caixa Econômica Federal Bank (2007-2008)
-                  </li>
-                  <li>
-                    <strong
-                      >Salesman and representative of computer products</strong
-                    >
-                    <br />(2004-2006)
-                  </li>
-                  <li>
-                    <strong>Agricultural company manager</strong>
-                    <br />(2002-2004)
-                  </li>
-                  <li>
-                    <strong>Quality advisor - ISO 9001/2000</strong>
-                    <br />(1999-2001)
-                  </li>
-                  <li>
-                    <strong
-                      >Sales and financial manager of automotive parts</strong
-                    >
-                    <br />(1998-1999)
-                  </li>
-                  <li>
-                    <strong>Building materials store manager</strong>
-                    <br />(1990-1996)
-                  </li>
-                </ul>
-              </div>
-            </div>
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-folder-open me-2"></i>
+              Case & Document Management
+            </h5>
+            <p class="mb-0">
+              Strong experience handling legal files, court documents,
+              deadlines, procedural compliance, and administrative legal tasks
+              with accuracy and confidentiality.
+            </p>
           </div>
         </div>
       </div>
-    </section>
 
-    <!-- Footer (horizontal, no background) -->
-    <footer
-      class="footer-section pt-4 pb-3"
-      style="background: none; border-top: 1px solid #e5e7eb"
-    >
-      <div class="container">
-        <div class="d-flex flex-column align-items-center">
-          <div class="mb-3 d-flex justify-content-center social-icons">
-            <a
-              href="https://github.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="GitHub"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a
-              href="https://linkedin.com/in/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="LinkedIn"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a
-              href="https://wa.me/55000000000"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="WhatsApp"
-              ><i class="fab fa-whatsapp"></i
-            ></a>
-            <a
-              href="https://instagram.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              href="mailto:ricardo@exemplo.com"
-              target="_blank"
-              class="fs-3"
-              aria-label="Email"
-              ><i class="fas fa-envelope"></i
-            ></a>
-          </div>
-          <div class="btn-group mb-3">
-            <a href="index.html#profile" class="btn-custom">Profile</a>
-            <a href="about.html" class="btn-custom">About</a>
-            <a href="livro.html" class="btn-custom">My Book</a>
-          </div>
-          <div class="text-center small text-navy-light mt-2">
-            © 2025 Ricardo Melo. All rights reserved.
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-user-tie me-2"></i>
+              Legal & Administrative Support
+            </h5>
+            <p class="mb-0">
+              Proven ability to assist legal professionals with daily operations,
+              client communication, scheduling, correspondence and internal coordination.
+            </p>
           </div>
         </div>
       </div>
-    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+    </div>
+  </div>
+</section>
+
+<!-- PROFESSIONAL SUMMARY -->
+<section class="py-5">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Professional Summary</h3>
+
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <p>
+          Brazilian-qualified lawyer with extensive experience in judicial advisory roles,
+          currently based in Cork, Ireland. Known for professionalism, discretion,
+          attention to detail and reliability in legal environments.
+        </p>
+
+        <p>
+          Adept at supporting solicitors and legal teams in fast-paced settings,
+          ensuring compliance with procedures, accurate documentation and
+          efficient administrative support.
+        </p>
+
+        <p class="mb-0">
+          Open to roles as <strong>Legal Assistant</strong> or
+          <strong>Legal Secretary</strong> within law firms or legal departments.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="pt-4 pb-3 border-top">
+  <div class="container text-center">
+
+    <div class="mb-3">
+      <a href="https://linkedin.com/in/ricardoadevmelo" target="_blank" class="me-3 fs-4">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:ricardo@exemplo.com" class="fs-4">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+
+    <div class="mb-3">
+      <a href="index.html" class="me-3">Home</a>
+      <a href="about.html" class="me-3">About</a>
+      <a href="livro.html">Publication</a>
+    </div>
+
+    <small class="text-muted">
+      © 2025 Ricardo Melo — Legal Assistant & Legal Secretary | Cork
+    </small>
+
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
