--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
       </a>
     </div>
 
-    <div class="mb-3">
-      <a href="index.html" class="me-3">Home</a>
-      <a href="about.html" class="me-3">About</a>
-      <a href="livro.html">Publication</a>
+    <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
+      <a href="index.html" class="btn btn-outline-dark">Home</a>
+      <a href="about.html" class="btn btn-dark">Professional Profile</a>
+      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
     </div>
 
     <small class="text-muted">
@@ -167,3 +167,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
