--- a/index.html
+++ b/index.html
@@ -142,10 +142,15 @@
 <footer class="pt-4 pb-3 border-top">
   <div class="container text-center">
 
-    <div class="mb-3">
-      <a href="https://linkedin.com/in/ricardoadevmelo" target="_blank" class="me-3 fs-4">
-        <i class="fab fa-linkedin"></i>
-      </a>
+   <div class="mb-3 d-flex justify-content-center">
+  <a href="https://linkedin.com/in/ricardoadevmelo"
+     target="_blank"
+     aria-label="LinkedIn"
+     class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
+     style="width: 44px; height: 44px;">
+     
+    <i class="fab fa-linkedin-in fs-5"></i>
+  </a>
       <a href="mailto:ricardo@exemplo.com" class="fs-4">
         <i class="fas fa-envelope"></i>
       </a>
@@ -166,5 +171,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
