--- a/index.html
+++ b/index.html
@@ -151,10 +151,86 @@
      
     <i class="fab fa-linkedin-in fs-5"></i>
   </a>
-      <a href="mailto:ricardo@exemplo.com" class="fs-4">
-        <i class="fas fa-envelope"></i>
-      </a>
+
+     <section class="py-5 bg-light" id="contact">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+
+        <h3 class="fw-bold text-center mb-4">Professional Contact</h3>
+
+        <form id="contact-form" method="POST">
+          
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              name="name"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              required
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="organisation" class="form-label">
+              Organisation <span class="text-muted">(optional)</span>
+            </label>
+            <input
+              type="text"
+              class="form-control"
+              id="organisation"
+              name="organisation"
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="subject" class="form-label">Subject</label>
+            <input
+              type="text"
+              class="form-control"
+              id="subject"
+              name="subject"
+              required
+            />
+          </div>
+
+          <div class="mb-4">
+            <label for="message" class="form-label">Message</label>
+            <textarea
+              class="form-control"
+              id="message"
+              name="message"
+              rows="5"
+              placeholder="Please leave your message regarding legal assistant or legal support opportunities."
+              required
+            ></textarea>
+          </div>
+
+          <div class="d-grid">
+            <button type="submit" class="btn btn-dark btn-lg">
+              Send Message
+            </button>
+          </div>
+
+        </form>
+
+      </div>
     </div>
+  </div>
+</section>
+
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
       <a href="about.html" class="btn btn-dark">Professional Profile</a>
@@ -171,6 +247,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
