Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -138,21 +138,8 @@
   </div>
 </section>
 
-<!-- FOOTER -->
-<footer class="pt-4 pb-3 border-top">
-  <div class="container text-center">
-
-   <div class="mb-3 d-flex justify-content-center">
-  <a href="https://linkedin.com/in/ricardoadevmelo"
-     target="_blank"
-     aria-label="LinkedIn"
-     class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
-     style="width: 44px; height: 44px;">
-     
-    <i class="fab fa-linkedin-in fs-5"></i>
-  </a>
-
-     <section class="py-5 bg-light" id="contact">
+<!-- CONTACT -->
+<section class="py-5 bg-light" id="contact">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8">
@@ -160,50 +147,27 @@
         <h3 class="fw-bold text-center mb-4">Professional Contact</h3>
 
         <form id="contact-form" method="POST">
-          
+
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              name="name"
-              required
-            />
+            <input type="text" class="form-control" id="name" name="name" required>
           </div>
 
           <div class="mb-3">
             <label for="email" class="form-label">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              required
-            />
+            <input type="email" class="form-control" id="email" name="email" required>
           </div>
 
           <div class="mb-3">
             <label for="organisation" class="form-label">
               Organisation <span class="text-muted">(optional)</span>
             </label>
-            <input
-              type="text"
-              class="form-control"
-              id="organisation"
-              name="organisation"
-            />
+            <input type="text" class="form-control" id="organisation" name="organisation">
           </div>
 
           <div class="mb-3">
             <label for="subject" class="form-label">Subject</label>
-            <input
-              type="text"
-              class="form-control"
-              id="subject"
-              name="subject"
-              required
-            />
+            <input type="text" class="form-control" id="subject" name="subject" required>
           </div>
 
           <div class="mb-4">
@@ -213,8 +177,8 @@
               id="message"
               name="message"
               rows="5"
-              placeholder="Please leave your message regarding legal assistant or legal support opportunities."
               required
+              placeholder="Please leave your message regarding legal assistant or legal support opportunities."
             ></textarea>
           </div>
 
@@ -230,7 +194,20 @@
     </div>
   </div>
 </section>
+  
+<!-- FOOTER -->
+<footer class="pt-4 pb-3 border-top">
+  <div class="container text-center">
 
+    <div class="mb-3 d-flex justify-content-center">
+      <a href="https://linkedin.com/in/ricardoadevmelo"
+         target="_blank"
+         aria-label="LinkedIn"
+         class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
+         style="width: 44px; height: 44px;">
+        <i class="fab fa-linkedin-in fs-5"></i>
+      </a>
+    </div>
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
       <a href="about.html" class="btn btn-dark">Professional Profile</a>
@@ -247,6 +224,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
