--- a/index.html
+++ b/index.html
@@ -1,185 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Ricardo Melo | Legal Assistant & Legal Secretary | Cork</title>
-
-  <meta name="description" content="Ricardo Melo – Legal Assistant and Legal Secretary based in Cork. 11+ years of judicial experience supporting judges, case management, legal documentation, and court procedures." />
-  <meta name="keywords" content="Legal Assistant Cork, Legal Secretary Cork, Law Firm Assistant Ireland, Judicial Experience, Case Management, Legal Support" />
-  <meta name="author" content="Ricardo Melo" />
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-</head>
-
-<body>
-
-<!-- HERO -->
-<section class="hero-section py-5 d-flex align-items-center">
-  <div class="container">
-    <div class="row align-items-center">
-
-      <div class="col-md-4 text-center mb-4 mb-md-0">
-        <img src="img/fotoperfil.png"
-             alt="Ricardo Melo – Legal Assistant Cork"
-             class="img-fluid rounded-circle shadow"
-             style="max-width: 220px;">
-      </div>
-
-      <div class="col-md-8">
-        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
-        <h2 class="h5 text-muted mb-3">
-          Legal Assistant & Legal Secretary | Cork, Ireland
-        </h2>
-
-        <p class="lead">
-          Legal professional with over <strong>11 years of judicial experience</strong>,
-          providing direct support to judges and legal teams.
-          Strong background in <strong>case management, legal documentation,
-          procedural compliance</strong> and administrative legal support.
-        </p>
-
-        <div class="mt-4">
-          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
-          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- CORE COMPETENCIES -->
-<section class="py-5 bg-light">
-  <div class="container">
-    <h3 class="fw-bold mb-4 text-center">Core Legal Competencies</h3>
-
-    <div class="row g-4">
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body">
-            <h5 class="fw-bold">
-              <i class="fa-solid fa-scale-balanced me-2"></i>
-              Judicial Experience
-            </h5>
-            <p class="mb-0">
-              11+ years working within the Brazilian Court of Justice,
-              supporting judges with legal analysis, drafting decisions,
-              procedural control and case preparation.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body">
-            <h5 class="fw-bold">
-              <i class="fa-solid fa-folder-open me-2"></i>
-              Case & Document Management
-            </h5>
-            <p class="mb-0">
-              Strong experience handling legal files, court documents,
-              deadlines, procedural compliance, and administrative legal tasks
-              with accuracy and confidentiality.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body">
-            <h5 class="fw-bold">
-              <i class="fa-solid fa-user-tie me-2"></i>
-              Legal & Administrative Support
-            </h5>
-            <p class="mb-0">
-              Proven ability to assist legal professionals with daily operations,
-              client communication, scheduling, correspondence and internal coordination.
-            </p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- PROFESSIONAL SUMMARY -->
-<section class="py-5">
-  <div class="container">
-    <h3 class="fw-bold mb-4 text-center">Professional Summary</h3>
-
-    <div class="row justify-content-center">
-      <div class="col-md-10">
-        <p>
-          Brazilian-qualified lawyer with extensive experience in judicial advisory roles,
-          currently based in Cork, Ireland. Known for professionalism, discretion,
-          attention to detail and reliability in legal environments.
-        </p>
-
-        <p>
-          Adept at supporting solicitors and legal teams in fast-paced settings,
-          ensuring compliance with procedures, accurate documentation and
-          efficient administrative support.
-        </p>
-
-        <p class="mb-0">
-          Open to roles as <strong>Legal Assistant</strong> or
-          <strong>Legal Secretary</strong> within law firms or legal departments.
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
-
 <!-- CONTACT -->
-<section class="py-5 bg-light" id="contact">
+<section class="py-5" id="contact">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8">
 
-        <h3 class="fw-bold text-center mb-4">Professional Contact</h3>
+        <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3>
+        <p class="text-center text-muted mb-4">
+          Interested in hiring a highly skilled Legal Assistant with <strong>11+ years of judicial experience</strong> 
+          and expertise in case management, court procedures, and legal documentation? 
+          Fill out the form below to discuss potential opportunities or recruitment enquiries.
+        </p>
 
-        <form id="contact-form" method="POST">
+        <!-- Bootstrap Alert -->
+        <div id="form-alert" class="alert d-none" role="alert"></div>
+
+        <form id="contact-form">
 
           <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" name="name" required>
+            <label class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="name" placeholder="e.g., John Smith" required>
           </div>
 
           <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required>
+            <label class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="your@email.com" required>
           </div>
 
           <div class="mb-3">
-            <label for="organisation" class="form-label">
-              Organisation <span class="text-muted">(optional)</span>
+            <label class="form-label">
+              Organisation <span class="text-muted">(law firm or recruitment agency)</span>
             </label>
-            <input type="text" class="form-control" id="organisation" name="organisation">
+            <input type="text" class="form-control" id="organisation" placeholder="e.g., ABC Law Firm">
           </div>
 
           <div class="mb-3">
-            <label for="subject" class="form-label">Subject</label>
-            <input type="text" class="form-control" id="subject" name="subject" required>
+            <label class="form-label">Subject</label>
+            <input type="text" class="form-control" id="subject" placeholder="Legal Assistant Opportunity" required>
           </div>
 
           <div class="mb-4">
-            <label for="message" class="form-label">Message</label>
-            <textarea
-              class="form-control"
-              id="message"
-              name="message"
-              rows="5"
-              required
-              placeholder="Please leave your message regarding legal assistant or legal support opportunities."
-            ></textarea>
+            <label class="form-label">Message</label>
+            <textarea class="form-control" id="message" rows="5"
+              placeholder="Please provide details about the role, team, or recruitment process. Highlight key requirements or expectations."></textarea>
           </div>
 
           <div class="d-grid">
@@ -190,42 +52,12 @@
 
         </form>
 
+        <p class="text-center text-muted mt-3 small">
+          Your enquiry will be reviewed promptly. I am available for Legal Assistant roles in Cork law firms and legal departments. 
+          All information is treated confidentially.
+        </p>
+
       </div>
     </div>
   </div>
 </section>
-  
-<!-- FOOTER -->
-<footer class="pt-4 pb-3 border-top">
-  <div class="container text-center">
-
-    <div class="mb-3 d-flex justify-content-center">
-      <a href="https://linkedin.com/in/ricardoadevmelo"
-         target="_blank"
-         aria-label="LinkedIn"
-         class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
-         style="width: 44px; height: 44px;">
-        <i class="fab fa-linkedin-in fs-5"></i>
-      </a>
-    </div>
-
-    <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
-      <a href="about.html" class="btn btn-dark">Professional Profile</a>
-      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
-    </div>
-
-    <small class="text-muted">
-      © 2025 Ricardo Melo — Legal Assistant & Legal Secretary | Cork
-    </small>
-
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
-
-
-
-
-
