--- a/index.html
+++ b/index.html
@@ -1,3 +1,112 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Ricardo Melo | Legal Assistant | Cork</title>
+
+  <meta name="description" content="Ricardo Melo – Legal Assistant based in Cork. 11+ years of judicial experience supporting judges, case management, legal documentation, and court procedures." />
+  <meta name="keywords" content="Legal Assistant Cork, Law Firm Assistant Ireland, Judicial Experience, Case Management, Legal Support" />
+  <meta name="author" content="Ricardo Melo" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
+
+<body>
+
+<!-- HERO -->
+<section class="hero-section py-5 d-flex align-items-center">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-md-4 text-center mb-4 mb-md-0">
+        <img src="img/fotoperfil.png"
+             alt="Ricardo Melo – Legal Assistant Cork"
+             class="img-fluid rounded-circle shadow"
+             style="max-width: 220px;">
+      </div>
+
+      <div class="col-md-8">
+        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+        <h2 class="h5 text-muted mb-3">
+          Legal Assistant | Cork, Ireland
+        </h2>
+
+        <p class="lead">
+          Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>,
+          supporting judges and legal teams with case preparation, documentation,
+          procedural compliance, and efficient administrative support.
+        </p>
+
+        <div class="mt-4">
+          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
+          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CORE COMPETENCIES -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Core Competencies as Legal Assistant</h3>
+
+    <div class="row g-4">
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-scale-balanced me-2"></i>
+              Judicial Experience
+            </h5>
+            <p class="mb-0">
+              11+ years assisting judges, preparing legal documents, reviewing case files, 
+              and ensuring strict compliance with procedures.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-folder-open me-2"></i>
+              Case & Document Management
+            </h5>
+            <p class="mb-0">
+              Skilled in handling case files, court documents, deadlines, and confidential information 
+              with accuracy and discretion.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="fw-bold">
+              <i class="fa-solid fa-user-tie me-2"></i>
+              Administrative & Legal Support
+            </h5>
+            <p class="mb-0">
+              Provides professional support to legal teams, including correspondence, scheduling, 
+              client communication, and coordination of daily operations.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 <!-- CONTACT -->
 <section class="py-5" id="contact">
   <div class="container">
@@ -6,9 +115,7 @@
 
         <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3>
         <p class="text-center text-muted mb-4">
-          Interested in hiring a highly skilled Legal Assistant with <strong>11+ years of judicial experience</strong> 
-          and expertise in case management, court procedures, and legal documentation? 
-          Fill out the form below to discuss potential opportunities or recruitment enquiries.
+          For recruitment enquiries, job opportunities, or professional contact related to Legal Assistant roles.
         </p>
 
         <!-- Bootstrap Alert -->
@@ -17,20 +124,20 @@
         <form id="contact-form">
 
           <div class="mb-3">
-            <label class="form-label">Full Name</label>
-            <input type="text" class="form-control" id="name" placeholder="e.g., John Smith" required>
+            <label class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" required>
           </div>
 
           <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="your@email.com" required>
+            <input type="email" class="form-control" id="email" required>
           </div>
 
           <div class="mb-3">
             <label class="form-label">
-              Organisation <span class="text-muted">(law firm or recruitment agency)</span>
+              Organisation <span class="text-muted">(law firm or recruiter)</span>
             </label>
-            <input type="text" class="form-control" id="organisation" placeholder="e.g., ABC Law Firm">
+            <input type="text" class="form-control" id="organisation">
           </div>
 
           <div class="mb-3">
@@ -40,8 +147,7 @@
 
           <div class="mb-4">
             <label class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="5"
-              placeholder="Please provide details about the role, team, or recruitment process. Highlight key requirements or expectations."></textarea>
+            <textarea class="form-control" id="message" rows="5" placeholder="Please provide details regarding the role or recruitment process." required></textarea>
           </div>
 
           <div class="d-grid">
@@ -52,12 +158,71 @@
 
         </form>
 
-        <p class="text-center text-muted mt-3 small">
-          Your enquiry will be reviewed promptly. I am available for Legal Assistant roles in Cork law firms and legal departments. 
-          All information is treated confidentially.
-        </p>
-
       </div>
     </div>
   </div>
 </section>
+
+<!-- FOOTER -->
+<footer class="pt-4 pb-3 border-top">
+  <div class="container text-center">
+
+    <div class="mb-3 d-flex justify-content-center">
+      <a href="https://linkedin.com/in/ricardoadevmelo"
+         target="_blank"
+         class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
+         style="width:44px;height:44px;">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+
+    <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
+      <a href="about.html" class="btn btn-dark">Professional Profile</a>
+      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+    </div>
+
+    <small class="text-muted">
+      © 2025 Ricardo Melo — Legal Assistant | Cork
+    </small>
+
+  </div>
+</footer>
+
+<!-- SCRIPTS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+<script>
+  emailjs.init("Bvf8Fx2PsIxme0qEl");
+
+  const form = document.getElementById("contact-form");
+  const alertBox = document.getElementById("form-alert");
+
+  form.addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    alertBox.className = "alert alert-info";
+    alertBox.textContent = "Sending your message...";
+    alertBox.classList.remove("d-none");
+
+    emailjs.send("service_ricardomelo", "template_1u3itg7", {
+      from_name: document.getElementById("name").value,
+      from_email: document.getElementById("email").value,
+      subject: document.getElementById("subject").value,
+      message: document.getElementById("message").value,
+      organisation: document.getElementById("organisation").value || "Not provided"
+    })
+    .then(() => {
+      alertBox.className = "alert alert-success";
+      alertBox.textContent = "Thank you. Your message has been sent successfully.";
+      form.reset();
+    })
+    .catch(() => {
+      alertBox.className = "alert alert-danger";
+      alertBox.textContent = "There was an error sending your message. Please try again later.";
+    });
+  });
+</script>
+
+</body>
+</html>
