--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
         <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3>
         <p class="text-center text-muted mb-4">
-          For recruitment enquiries, job opportunities, or professional contact related to Legal Assistant roles.
+          Interested in hiring a highly skilled Legal Assistant with <strong>11+ years of judicial experience</strong> 
+          and expertise in case management, court procedures, and legal documentation? 
+          Fill out the form below to discuss potential opportunities or recruitment enquiries.
         </p>
 
         <!-- Bootstrap Alert -->
@@ -124,20 +126,20 @@
         <form id="contact-form">
 
           <div class="mb-3">
-            <label class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" required>
+            <label class="form-label">Full Name</label>
+            <input type="text" class="form-control" id="name" placeholder="e.g., John Smith" required>
           </div>
 
           <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" required>
+            <input type="email" class="form-control" id="email" placeholder="your@email.com" required>
           </div>
 
           <div class="mb-3">
             <label class="form-label">
-              Organisation <span class="text-muted">(law firm or recruiter)</span>
+              Organisation <span class="text-muted">(law firm or recruitment agency)</span>
             </label>
-            <input type="text" class="form-control" id="organisation">
+            <input type="text" class="form-control" id="organisation" placeholder="e.g., ABC Law Firm">
           </div>
 
           <div class="mb-3">
@@ -147,7 +149,8 @@
 
           <div class="mb-4">
             <label class="form-label">Message</label>
-            <textarea class="form-control" id="message" rows="5" placeholder="Please provide details regarding the role or recruitment process." required></textarea>
+            <textarea class="form-control" id="message" rows="5"
+              placeholder="Please provide details about the role, team, or recruitment process. Highlight key requirements or expectations."></textarea>
           </div>
 
           <div class="d-grid">
@@ -157,6 +160,11 @@
           </div>
 
         </form>
+
+        <p class="text-center text-muted mt-3 small">
+          Your enquiry will be reviewed promptly. I am available for Legal Assistant roles in Cork law firms and legal departments. 
+          All information is treated confidentially.
+        </p>
 
       </div>
     </div>
@@ -226,3 +234,4 @@
 
 </body>
 </html>
+
