Fix HTML formatting and structure
The HTML file was updated to correct formatting issues and ensure proper rendering of the content.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
 
-        <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3>
+        <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3><br>
         <p class="text-center text-muted mb-4">
           Interested in hiring a highly skilled Legal Assistant with <strong>11+ years of judicial experience</strong> 
           and expertise in case management, court procedures, and legal documentation? 
@@ -234,4 +234,5 @@
 
 </body>
 </html>
+
 
